--- a/public/css/bootstrap.css
+++ b/public/css/bootstrap.css
@@ -6849,6 +6849,7 @@ button.close {
 .top5 { margin-top: 5px;}
 .top15 {margin-top: 15px;}
 .white { color: #FFF !important; }
+.gray { color: gray; }
 
 .divider-vertical {
   /*border-left: 1px solid #f2f2f2;*/
@@ -6901,3 +6902,29 @@ button.close {
   margin-left: auto;
   margin-right: auto;
 }
+
+.left-inner-addon {
+  position: relative;
+}
+.left-inner-addon input {
+  padding-left: 30px;
+}
+.left-inner-addon i {
+  position: absolute;
+  padding: 10px 12px;
+  pointer-events: none;
+}
+
+.right-inner-addon {
+  position: relative;
+}
+.right-inner-addon input {
+  padding-right: 30px;
+}
+.right-inner-addon i {
+  position: absolute;
+  right: 0px;
+  padding: 10px 12px;
+  pointer-events: none;
+}
+.form-last-name { height: 50px;}
