--- a/public/css/form.css
+++ b/public/css/form.css
@@ -45,7 +45,7 @@ button.btn {
     margin: 0;
     padding: 0 20px;
     vertical-align: middle;
-    background: #19b9e7;
+    /*background: #19b9e7;*/
     border: 0;
     font-family: 'Roboto', sans-serif;
     font-size: 16px;
